Test use of site.github.project_title

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+---
+test: test
+---
 <html>
 <head>
   <title>&#9996;</title>
 </head>
 <body style="font-size: 600px; text-align: center">
 &#9996;
+<!--
+site.github.project_title: {{ site.github.project_title }}
+-->
 </body>
 </html>
