Test overriding `github` config value

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ test: test
 <body style="font-size: 600px; text-align: center">
 &#9996;
 <!--
-site.github.project_title: {{ site.github.project_title }}
+site.github: {{ site.github }}
 -->
 </body>
 </html>
